--- a/Tables1.html
+++ b/Tables1.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Table 1</title>
 </head>
 <body>
-    
+    <table border = "3" align="center">
+        <tr>
+            <td align="center"> Names </td>
+        </tr>
+        <tr>
+            <td>joan</td>
+        </tr>
+        <tr>
+            <td>Peter</td>
+        </tr>
+        <tr>
+            <td>yulian</td>
+        </tr>
+    </table>
 </body>
 </html>
