--- a/Tables2.html
+++ b/Tables2.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabla 2 </title>
 </head>
 <body>
-    
+    <table border = "3" align="center">
+        <tr>
+            <td>Names</td>
+            <td>Apellidos</td>
+        </tr>
+        <tr>
+            <td>Joan</td>
+            <td>Robles</td>
+        </tr>
+        <tr>
+            <td>Peter</td>
+            <td>McDonald</td>
+        </tr>
+        <tr>
+            <td>Yulian</td>
+            <td>Assange</td>
+        </tr>
+    </table>
 </body>
 </html>
