--- a/Tables3.html
+++ b/Tables3.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabla 3</title>
 </head>
 <body>
-    
+    <table border = "3" align="center">
+        <tr>
+            <td align="center" colspan="2">Cars</td>
+            <tr>
+                <td>Brand</td>
+                <td>Reference</td>
+            </tr>
+            <tr>
+                <td rowspan="4">Mazda</td>
+                <td>cx-3</td>
+                <tr><td>cx-5</td></tr>
+                <tr><td>cx60</td></tr>
+                <tr><td>323</td></tr>
+            </tr>
+            <tr>
+                <td rowspan="3"> renault</td>
+                <tr><td>sandero</td></tr>
+                <tr><td>kwid</td></tr>
+            </tr>
+            <tr>
+                <td>Chevrolet</td>
+                <td>Aveo</td>
+            </tr>
+        </tr>
+    </table>
 </body>
 </html>
