--- a/Tables4.html
+++ b/Tables4.html
@@ -6,6 +6,61 @@
     <title>Tabla 4</title>
 </head>
 <body>
+    <table border = "3" align="center">
+        <tr>
+            <td rowspan="3">Item 1</td>
+            <td>Item 2</td>
+            <td>Item 3</td>
+            <td>Item 4</td>
+        </tr>
+        <tr>
+            <td>Item 5</td>
+            <td>Item 6</td>
+            <td>Item 7</td>
+        </tr>
+    </table>
+
+    <br>
+
+    <table border = "3" align="center">
+        <tr>
+            <td>Item 1</td>
+            <td>Item 2</td>
+        </tr>
+        <tr>
+            <td>Item 3</td>
+            <td>Item 4</td>
+            <td>Item 5</td>
+        </tr>
+    </table>
+
+    <br>
+
+    <table border = "3" align="center">
+        <tr>
+            <td>Item 1</td>
+            <td rowspan="3">Item 2</td>
+            <td>Item 3</td>
+        </tr>
+        <tr>
+            <td>Item 4</td>
+            <td>Item 5</td>
+        </tr>
+    </table>
+
+    <br>
+
+    <table border = "3" align="center">
+        <tr>
+            <td>Item 1</td>
+            <td>Item 2</td>
+        </tr>
+        <tr>
+            <td>Item 3</td>
+            <td>Item 4</td>
+            <td>Item 5</td>
+        </tr>
+    </table>
     
 </body>
 </html>
