--- a/Tables5.html
+++ b/Tables5.html
@@ -8,14 +8,26 @@
 <body>
     <table border = "3" align="center">
         <tr>
-            <td><img src =  "imagenes/APPLE-GALA-KG.jpg" width="50"></td>
-            <td>img2</td>
-            <td>img3</td>
+            <td><img src =  "imagenes/APPLE-GALA-KG.jpg" width="60"></td>
+            <td><img src =  "imwgenes/main-qimg-455e9bc674831f954e062b6d8d593a88.jpg" width = "60"></td>
+            <td><img src =  "imagenes/Pera_3.jpg" width="70"></td>
         </tr>
         <tr>
             <td>La manazana</td>
             <td>El melocoton</td>
             <td>La pera</td>
+        </tr>
+    </table>
+    <table border = "3" align="center">
+        <tr>
+            <td><img src =  "imagenes/cnne-159403-120604032828-fresh-ripe-bananas-story-top.jpg" width="70"></td>
+            <td><img src =  "imwgenes/naranja.jpg" width = "70"></td>
+            <td><img src =  "imagenes/limon.jpg" width="70"></td>
+        </tr>
+        <tr>
+            <td>El banano</td>
+            <td>La naranja</td>
+            <td>El limon</td>
         </tr>
     </table>
 </body>
