--- a/Tables7.html
+++ b/Tables7.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabla 7</title>
 </head>
 <body>
-    
+    <table border = "3" align="center">
+        <caption>Time Table</caption>
+        <tr>
+            <th rowspan="7">Hours</th>
+            <th>Mon</th>
+            <th>Tue</th>
+            <th>Wed</th>
+            <th>Thu</th>
+            <th>Fri</th>
+        </tr>
+        <tr>
+            <td>math</td>
+            <td>science</td>
+            <td>math</td>
+            <td>science</td>
+            <td>arts</td>
+        </tr>
+        <tr>
+            <td>math</td>
+            <td>science</td>
+            <td>math</td>
+            <td>science</td>
+            <td>arts</td>
+        </tr>
+        <tr>
+            <td colspan="5" align="center">Lunch</td>
+        </tr>
+        <tr>
+            <td>Math</td>
+            <td>Science</td>
+            <td>Math</td>
+            <td rowspan="2" colspan="2">Project Work</td>
+        </tr>
+        <tr>
+            <td>Math</td>
+            <td>Science</td>
+            <td>Math</td>
+        </tr>
+    </table>
 </body>
 </html>
