--- a/Tables8.html
+++ b/Tables8.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabla 8</title>
 </head>
 <body>
-    
+    <table border = "3" align="center" bordercolor ="#79b0ca">
+        <tr>
+            <td align="center" colspan="2">Languaje and framworks</td>
+            <tr>
+                <td >phyton</td>
+                <td>Django</td>
+            </tr>
+            <tr>
+                <td rowspan="3">Javascript</td>
+                <tr><td>React.js</td></tr>
+                <tr><td>Vue.js</td></tr>
+            </tr>
+            <tr>
+                <td>Ruby</td>
+                <td>Ruby on rails</td>
+            </tr>
+        </tr>
+    </table>
 </body>
 </html>
