--- a/Tables9.html
+++ b/Tables9.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabla 9</title>
 </head>
 <body>
-    
+    <table border = "3" align="center" bordercolor ="#39f61f">
+        <tr>
+            <td bgcolor="#f6a81f">Sr.No</td>
+            <td bgcolor="#f6a81f">Rell No</td>
+            <td bgcolor="#f6a81f">Name</td>
+            <td bgcolor="#f6a81f">Team</td>
+        </tr>
+        <tr>
+            <td bgcolor="#f6a81f">1</td>
+            <td>1001</td>
+            <td>John</td>
+            <td>Red</td>
+        </tr>
+        <tr>
+            <td bgcolor="#f6a81f">2</td>
+            <td>1002</td>
+            <td>Peter</td>
+            <td>Blue</td>
+        </tr>
+        <tr>
+            <td bgcolor="#f6a81f">3</td>
+            <td>1003</td>
+            <td>Henry</td>
+            <td>Green</td>
+        </tr>
+    </table>
 </body>
 </html>
