--- a/Tables6.html
+++ b/Tables6.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabla 6</title>
 </head>
 <body>
-    
+    <table border = "3" align="center" >
+        <caption>A test table with merged cells</caption>
+        <tr>
+            <th rowspan="2"> </th>
+            <th colspan="2">average</th>
+            <th rowspan="2">Red eyes</th>
+        </tr>
+        <tr>
+            <th>height</th>
+            <th>weight</th>
+        </tr>
+        <tr>
+            <td>males</td>
+            <td>1.9</td>
+            <td>0.003</td>
+            <td>40%</td>
+        </tr>
+        <tr>
+            <td>females</td>
+            <td>1.7</td>
+            <td>0.002</td>
+            <td>43%</td>
+        </tr>
+    </table>
 </body>
 </html>
